--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
       <div class="content">
         <!-- 구글로고 -->
         <div class="logo">
-          <a href="#"><img src="images/googlelogo_color_272x92dp.png" alt="구글로고" /></a>
+          <a href="#"
+            ><img src="images/googlelogo_color_272x92dp.png" alt="구글로고"
+          /></a>
         </div>
         <!-- 검색창 -->
         <div class="search-box">
@@ -73,42 +75,100 @@
           </div>
         </div>
         <!-- 바로가기 -->
-         <div class="other-site">
-            <ul>
-                <li><a href="#">
-                    <div class="roundBox"><img src="" alt=""></div>
-                    <p>NAVER</p>
-                </a></li>
-                <li><a href="#">
-                    <div class="roundBox"><img src="" alt=""></div>
-                    <p>Instagram</p>
-                </a></li>
-                <li><a href="#">
-                    <div class="roundBox"><img src="" alt=""></div>
-                    <p>Notion</p>
-                </a></li>
-                <li><a href="#">
-                    <div class="roundBox"><img src="" alt=""></div>
-                    <p>Pinterest</p>
-                </a></li>
-                <li><a href="#">
-                    <div class="roundBox"><img src="" alt=""></div>
-                    <p>ChatGPT</p>
-                </a></li>
-                <li><a href="#">
-                    <div class="roundBox"><img src="" alt=""></div>
-                    <p>Pigma</p>
-                </a></li>
-                <li><a href="#">
-                    <div class="roundBox"><img src="" alt=""></div>
-                    <p>Github</p>
-                </a></li>
-                <li><a href="#">
-                    <div class="roundBox"><img src="" alt=""></div>
-                    <p>바로가기 추가</p>
-                </a></li>
-            </ul>
-         </div>
+        <div class="other-site">
+          <ul>
+            <li>
+              <a href="#">
+                <div class="roundBox">
+                  <img src="images/naver.png" alt="네이버아이콘" />
+                </div>
+                <p>NAVER</p>
+              </a>
+              <div class="more">
+                <img src="images/icon_more_vert.svg" alt="더보기" />
+              </div>
+            </li>
+            <li>
+              <a href="#">
+                <div class="roundBox">
+                  <img src="images/인스타그램.png" alt="인스타그램아이콘" />
+                </div>
+                <p>Instagram</p>
+              </a>
+              <div class="more">
+                <img src="images/icon_more_vert.svg" alt="더보기" />
+              </div>
+            </li>
+            <li>
+              <a href="#">
+                <div class="roundBox">
+                  <img id="notion" src="images/노션.png" alt="노션아이콘" />
+                </div>
+                <p>Notion</p>
+              </a>
+              <div class="more">
+                <img src="images/icon_more_vert.svg" alt="더보기" />
+              </div>
+            </li>
+            <li>
+              <a href="#">
+                <div class="roundBox">
+                  <img
+                    id="pinterest"
+                    src="images/핀터레스트.png"
+                    alt="핀터레스트아이콘"
+                  />
+                </div>
+                <p>Pinterest</p>
+              </a>
+              <div class="more">
+                <img src="images/icon_more_vert.svg" alt="더보기" />
+              </div>
+            </li>
+            <li>
+              <a href="#">
+                <div class="roundBox">
+                  <img id="chat" src="images/챗.png" alt="챗지피티아이콘" />
+                </div>
+                <p>ChatGPT</p>
+              </a>
+              <div class="more">
+                <img src="images/icon_more_vert.svg" alt="더보기" />
+              </div>
+            </li>
+            <li>
+              <a href="#">
+                <div class="roundBox">
+                  <img id="pigma" src="images/피그마.png" alt="피그마아이콘" />
+                </div>
+                <p>Pigma</p>
+              </a>
+              <div class="more">
+                <img src="images/icon_more_vert.svg" alt="더보기" />
+              </div>
+            </li>
+            <li>
+              <a href="#">
+                <div class="roundBox">
+                  <img id="git" src="images/깃허브.png" alt="깃허브아이콘" />
+                </div>
+                <p>Github</p>
+              </a>
+              <div class="more">
+                <img src="images/icon_more_vert.svg" alt="더보기" />
+              </div>
+            </li>
+            <li>
+              <a href="#">
+                <div class="roundBox" id="plus"><span>+</span></div>
+                <p>바로가기 추가</p>
+              </a>
+              <div class="more">
+                <img src="images/icon_more_vert.svg" alt="더보기" />
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
