google-login ~ing

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           /></a>
         </div>
         <!-- 로그인버튼 -->
-        <a href="#"><button>Log-in</button></a>
+        <a href="#" onclick="window.open('login.html')"><button>Log-in</button></a>
       </div>
       <!-- 컨텐츠영역 -->
       <div class="content">
