favicon 수정, link 걸기

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="other-site">
           <ul>
             <li>
-              <a href="#">
+              <a href="https://www.naver.com/">
                 <div class="roundBox">
                   <img src="images/naver.png" alt="네이버아이콘" />
                 </div>
@@ -89,7 +89,7 @@
               </div>
             </li>
             <li>
-              <a href="#">
+              <a href="https://www.instagram.com/">
                 <div class="roundBox">
                   <img src="images/인스타그램.png" alt="인스타그램아이콘" />
                 </div>
@@ -100,7 +100,7 @@
               </div>
             </li>
             <li>
-              <a href="#">
+              <a href="https://www.notion.com/ko">
                 <div class="roundBox">
                   <img id="notion" src="images/노션.png" alt="노션아이콘" />
                 </div>
@@ -111,7 +111,7 @@
               </div>
             </li>
             <li>
-              <a href="#">
+              <a href="https://kr.pinterest.com/">
                 <div class="roundBox">
                   <img
                     id="pinterest"
@@ -126,7 +126,7 @@
               </div>
             </li>
             <li>
-              <a href="#">
+              <a href="https://chatgpt.com/">
                 <div class="roundBox">
                   <img id="chat" src="images/챗.png" alt="챗지피티아이콘" />
                 </div>
@@ -137,7 +137,7 @@
               </div>
             </li>
             <li>
-              <a href="#">
+              <a href="https://www.figma.com/">
                 <div class="roundBox">
                   <img id="pigma" src="images/피그마.png" alt="피그마아이콘" />
                 </div>
@@ -148,7 +148,7 @@
               </div>
             </li>
             <li>
-              <a href="#">
+              <a href="https://github.com/">
                 <div class="roundBox">
                   <img id="git" src="images/깃허브.png" alt="깃허브아이콘" />
                 </div>
