--- a/login.html
+++ b/login.html
@@ -13,6 +13,25 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- favicon -->
+     <link
+      rel="icon"
+      type="image/png"
+      href="assets/favicon (3)/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="assets/favicon (3)/favicon.svg"
+    />
+    <link rel="shortcut icon" href="assets/favicon (3)/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon (3)/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="assets/favicon (3)/site.webmanifest" />
   </head>
   <body>
     <!-- 전체 감싸는 영역 -->
