--- a/login.html
+++ b/login.html
@@ -53,8 +53,8 @@
         </div>
         <button type="submit">Log in</button>
       </form>
-      <!-- 구분선 -->
-      <div class="line"></div>
+      <!-- 구분-->
+      <div class="or">or</div>
       <!-- other 로그인 -->
       <button type="button" id="otherLogin">
         <img src="images/naver.png" alt="네이버로그인" />
@@ -68,7 +68,7 @@
         <span>구글로 로그인하기</span>
       </button>
       <!-- 공지사항 -->
-      <button type="button" id="notice">공지사항</button>
+      <a href="notice.html" id="notice-a"><button type="button" id="notice">공지사항</button></a>
     </div>
   </body>
 </html>
